--- a/tests/Aspire.Hosting.Tests/Aspire.Hosting.Tests.csproj
+++ b/tests/Aspire.Hosting.Tests/Aspire.Hosting.Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Aspire.Dashboard\Aspire.Dashboard.csproj" />
     <ProjectReference Include="..\..\src\Aspire.Hosting.AppHost\Aspire.Hosting.AppHost.csproj" IsAspireProjectResource="false" />
     <ProjectReference Include="..\..\src\Aspire.Hosting.AWS\Aspire.Hosting.AWS.csproj" IsAspireProjectResource="false" />
     <ProjectReference Include="..\..\src\Aspire.Hosting.Azure\Aspire.Hosting.Azure.csproj" IsAspireProjectResource="false" />
@@ -64,6 +65,5 @@
 
   <Target Name="InstallBrowser" AfterTargets="Build">
     <Message Text="## Installing playright browser ##" Importance="high" />
-    <Exec Command="pwsh playwright.ps1 install" WorkingDirectory="$(ProjectDir)..\..\artifacts\bin\Aspire.Dashboard.Tests\Debug\net8.0\"/>
   </Target>
 </Project>
